added JSHint :rageface:

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "bugs": {
     "url": "https://github.com/mmcfadyen91/dashboard/issues"
   },
+  "jshintConfig" : "jshintrc",
   "homepage": "https://github.com/mmcfadyen91/dashboard",
   "devDependencies": {
     "coffee-script": "^1.7.0",
